fix: fix content overflow in body

--- a/src/styles/contacts.css
+++ b/src/styles/contacts.css
@@ -47,7 +47,7 @@
 	background-color: var(--card-background-color);
 	color: var(--card-text-color);
 	width: 60%;
-	padding: 1.2em;
+	/* padding: 1.2em; */
 }
 
 /****************************************************/
